Text overflow-proof fixes all pages.

--- a/source/less/components/contest.less
+++ b/source/less/components/contest.less
@@ -7,6 +7,7 @@
   @media (min-width: @width-md) {
     justify-content: space-between;
 
+    column-gap: 10px;
     flex-direction: row;
   }
 }
