--- a/source/less/components/info.less
+++ b/source/less/components/info.less
@@ -109,7 +109,7 @@
       font-size: 120px;
       line-height: 1.36;
 
-      background-size: cover;
+      background-size: contain;
     }
   }
 
