--- a/source/less/components/posts-item.less
+++ b/source/less/components/posts-item.less
@@ -145,8 +145,9 @@
     height: 12px;
     margin-right: 18px;
 
+    flex: 0 0 auto;
     content: "";
-    background: url("../../img/heart.svg");
+    background: url("../../img/heart.svg") no-repeat;
 
     @media (min-width: @width-md) {
       margin-right: 0;
