--- a/source/less/components/table-tariffs.less
+++ b/source/less/components/table-tariffs.less
@@ -13,8 +13,6 @@
 
   @media (min-width: @width-lg) {
     min-height: 60px;
-    //font-size: 18px;
-    //line-height: 1.67;
   }
 }
 
@@ -146,12 +144,8 @@
 }
 
 .table-tariffs__feature-name {
-  //min-width: 280px;
-  //min-height: 61px;
-  //height: 100%;
   display: flex;
   align-items: center;
-  //padding-top: 14px;
   padding-left: 19px;
 
   font-size: 14px;
@@ -163,19 +157,17 @@
   border-bottom: 2px solid @light-grey;
   border-right: 2px solid @light-grey;
 
+  @media (max-width: @width-md-only) {
+    padding-right: 52px;
+  }
+
   @media (min-width: @width-md) {
-    //min-width: 154px;
-    //min-height: 45px;
-    //padding-top: 7px;
     padding-left: 14px;
 
     text-transform: capitalize;
   }
 
   @media (min-width: @width-lg) {
-    //min-width: 234px;
-    //min-height: 60px;
-    //padding-top: 12px;
     padding-left: 20px;
 
     font-size: 18px;
@@ -208,7 +200,6 @@
   }
 
   @media (min-width: @width-md) {
-    //min-height: 45px;
     padding-top: 7px;
     padding-left: 14px;
 
